Update redirect URL to pages/home.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="refresh" content="0; url=home.html">
     <title>Redirecting...</title>
     <script type="text/javascript">
-        window.location.href = "home.html";
+        window.location.href = "pages/home.html";
     </script>
 </head>
 <body>
